<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_action_hotel"
            android:title="@string/menu_hotels" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_action_restaurant"
            android:title="@string/menu_restaurants" />
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/ic_action_tour"
            android:title="@string/menu_tour" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_info"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
