<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:mContext=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView

                    android:id="@+id/restaurants_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"


                    android:scaleType="fitXY"

                    app:srcCompat="@drawable/restaurant" />
            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/restaurants_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/restaurants_title_text"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/restaurants_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:text="@string/restaurants_tv_text"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/hotel_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"

                    app:srcCompat="@drawable/hotel" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/hotels_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/hotels_title_text"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/hotels_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:text="@string/hotels_tv_text"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/tour_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitXY"

                    app:srcCompat="@drawable/tour" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tour_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tour_title_text"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tour_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                android:text="@string/tour_tv_text"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>